fix: remove page overflow

--- a/src/index.css
+++ b/src/index.css
@@ -110,8 +110,8 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  /* overflow-x: hidden !important; */
   scroll-behavior: smooth;
+  overflow-x: hidden !important;
 }
 
 html {
@@ -219,7 +219,7 @@ html {
 }
 
 .loader-container {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
